     it's either "Keyb" (for MIDI keyboard entry) or C, C#, ... B

     The local root selection is C, C#, ... B

     Notes and Chords will be transposed accordingly if the track is in
     Normal mode (and not in Transpose or Arpeggiator mode)

     Similar for Scale: it can override the globally configured scale
     of the FX->Scale page for each step.
     
   o new drum configuration: 4*16/2*64

   o individual steps of CC, PitchBender, Program Change and Aftertouch
     layers can now be disabled so that they won't play.
     Turn the encoder to the rightmost position (value 128)

     Also the init value has been changed: for these layers, the steps
     are now disabled by default.
     For CCs please change the init value by yourself in the UTIL->OPT
     page (option #12: Initial CC value)

   o new behaviour of CLEAR button in recording mode:
     it clears the selected step only (not the entire pattern).
     During live recording it will clear the "played" steps so long the
     button is pressed.

   o new CC functions which can be configured in MIDI->ExtCtrl.:
     o Play/Stop: allows to assign the PLAY button to a CC
     o Record: allows to assign the RECORD button to a CC


MIDIboxSEQ V4.091
~~~~~~~~~~~~~~~~~

   o new parameter type "Chord2" provides an alternative set of 32 chords

   o new parameter type "Aftertouch" allows to send and record channel pressure events

   o CPU load display has been re-adjusted for LPC17 and STM32F4

   o hwcfg/wilba*/MBSEQ_HW.V4: default F1-F4 assignments changed to:
     F1: Track Select, F2: Live Forwarding, F3: Recording, F4: Save All

   o MBSEQ_HW.V4: added new button/LED functions: FX, MOVE, SCROLL

   o MBSEQ_HW.V4: added new LED_MEASURE function which will activate a LED
     when the first step of the measure is played.

   o CC Parameter layer label now prints "#<number>" instead of "CC"

   o Jam page: AStart now starts to record into first step in 